Fix parallax and white space on smaller screens

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -45,6 +45,14 @@ body {
   .card-about {
     height: 100% !important;
   }
+
+  .parallax-container {
+    height: 200px !important;
+  }
+}
+
+.parallax-container {
+  height: 100%;
 }
 
 .break {
@@ -74,11 +82,6 @@ body {
 
 blockquote {
   border-left: 5px solid #f5f5f5 !important;
-}
-
-.darken {
-  filter: brightness(40%);
-  width: 100vw;
 }
 
 .parallax-container {
